templates/metadoc_template.yaml
---
# Source: metadoc/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-app
  namespace: novax
spec:
  selector:
    app: release-name-app
  ports:
    - protocol: TCP
      port: 1643
      targetPort: 1643
---
# Source: metadoc/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-web
  namespace: novax
spec:
  selector:
    app: release-name-web
  ports:
    - protocol: TCP
      port: 1313
      targetPort: 1313
---
# Source: metadoc/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-app
  namespace: novax
  annotations:
  labels:
    app: release-name-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-app
  template:
    metadata:
      labels:
        app: release-name-app
    spec:
      serviceAccountName: release-name-serviceaccount
      automountServiceAccountToken: true
      containers:
        - name: release-name-app
          image: kvalitetsit/metadoc-app:main
          imagePullPolicy: Always
          ports:
            - containerPort: 1643
      imagePullSecrets:
        - name: regcred
---
# Source: metadoc/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-web
  namespace: novax
  annotations:
    hugoDocumentation: "true"
    hugoAppAbout: "Denne app udstiller en hjemmeside hvor man kan læse om sine services og tilgå service- og dokumentationslinks."
  labels:
    app: release-name-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  release-name-web
  template:
    metadata:
      labels:
        app:  release-name-web
    spec:
      serviceAccountName: release-name-serviceaccount
      automountServiceAccountToken: true
      containers:
        - name:  release-name-web
          image: kvalitetsit/metadoc-web:main
          imagePullPolicy: Always
          ports:
            - containerPort: 1313
          volumeMounts:
              - mountPath: "/src/content/posts"
                readOnly: true
                name: postsconfigmap
      imagePullSecrets:
        - name: regcred
      volumes:
        - configMap:
            name: release-name-config
          name: postsconfigmap
---
# Source: metadoc/templates/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-app
  namespace: novax
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: metadoc.app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-app
                port:
                  number: 1643
---
# Source: metadoc/templates/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  release-name-web
  namespace: novax
  annotations:
spec:
  rules:
    - host:  metadoc.web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-web
                port:
                  number: 1313
